# Penta-V-Kernel

./: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml  python_release.yml
Documentation/: CONTRIBUTING.md  DEPLOYMENT.md  SECURITY.md  USAGE_GUIDE.md
benches/: resonance_bench.rs
documents/:  BENEFITS.md  ARCHITECTURE.md  STRATEGY.md  USAGE_GUIDE.md
src/: lib.rs  mesh.rs  resonance.rs
src/bridge/: mod.rs  packer.rs  security.rs  telemetry.rs  validator.rs
src/core/: cooling.rs  guard.rs  mod.rs
src/processing/: cleaner.rs  engine.rs  mod.rs
src/shapes/: circle.rs  decagon.rs  dodecagon.rs  heptagon.rs  hexagon.rs  mod.rs  nonagon.rs  octagon.rs  pentagon.rs  square.rs  triangle.rs
src/utils/: calculator.rs  mod.rs
tests/: benchmark_suite.rs  integration_suite.rs  stability_suite.rs
