[package]
name = "penta_v_kernel"
# Version 0.4.0: The Resonance Era - Universal Stability for Games, Data, & Backend.
version = "0.4.0"
edition = "2021"
authors = [
    "Issac Andrew (The First Architect) <Issaclex@proton.me>",
    "Klas Segeljakt <klas.segeljakt@example.com>"
]
description = "Universal Sovereign Engine for Geometric Stability. Solving the AI-Deficit, Legacy Migration Hell, and Data Corruption. Optimized for Game Engines, Big Data, Cyber-Security, and High-Performance Backend Systems."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Penta-V-Kernel/Penta-V-Kernel"
homepage = "https://github.com/Penta-V-Kernel"

# --- Sovereign Benchmarking (Criterion) ---
[[bench]]
name = "resonance_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# --- The Universal Industry Keywords (Maximum Global SEO & Search Optimization) ---
keywords = [
    "rust", "python", "blockchain", "web3", "smart-contracts", 
    "gamedev", "data-science", "backend", "cybersecurity", "deeptech", 
    "post-quantum", "big-data", "game-engine", "machine-learning", "performance", 
    "systems-programming", "real-time", "distributed-systems", "data-cleaning", "fintech", 
    "edge-computing", "low-latency", "geometric-logic", "scalability", "resource-migration", 
    "no-std", "iot", "kernel-security", "stability-protocol", "high-concurrency", 
    "ai-safety", "sovereign-tech", "parallel-computing", "decentralized"
]

categories = [
    "cryptography",
    "algorithms",
    "embedded-software",
    "os",
    "science",
    "data-structures",
    "development-tools",
    "api-bindings",
    "rendering",
    "web-programming",
    "database-implementations"
]

[lib]
name = "penta_v_kernel"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"] 

[features]
# The 'default' feature handles core pyo3 initialization for local testing.
default = ["pyo3"]

# 'extension-module' is mandatory for Python wheel builds (Maturin).
extension-module = ["pyo3/extension-module"]

# Sovereign pack optimized for Python 3.10+ ABI stability.
sovereign-pack = ["pyo3/abi3-py310"]

[dependencies]
# Standard PyO3 with auto-initialize for seamless Python integration.
pyo3 = { version = "0.21", features = ["auto-initialize"], optional = true }

# --- Penta-Clean & Core Dependencies ---
# Rayon handles parallel geometric dissipation tasks across the HRL for Game/Data loads.
rayon = "1.8"

# Polars core for high-performance data sanitization and sub-microsecond latency.
polars-core = { version = "0.36", features = [
    "performant", 
    "rows",        
    "zip_with",    
    "fmt"          
] }

[build-dependencies]
# Essential for linking and PyO3 configuration for sovereign deployment.
pyo3-build-config = "0.21"

[profile.dev]
# Enforce abort on panic to maintain kernel state integrity during development.
panic = "abort"

[profile.release]
# Sovereign Deployment Optimizations for Hyperdimensional Coherence.
panic = "abort"
lto = true              # Link-Time Optimization for absolute performance.
opt-level = 3           # Max optimization for speed.
strip = "symbols"       # Minimal binary footprint for Edge/IoT and Games.
codegen-units = 1       # Enhance LTO effectiveness for Phase VI logic.

[profile.test]
# Maintain deterministic behavior during HRL stability tests.
panic = "abort"
