[package]
name = "penta_v_kernel"
# Version 0.4.0: The Resonance Era - Universal Stability for Games, Data, & Backend.
version = "0.4.0"
edition = "2021"
authors = [
    "Issac Andrew (The First Architect) <Issaclex@proton.me>",
    "Klas Segeljakt <klas.segeljakt@example.com>"
]
description = "Universal Sovereign Engine for Geometric Stability. Solving the AI-Deficit, Legacy Migration Hell, and Data Corruption. Optimized for Game Engines, Big Data, Cyber-Security, and High-Performance Backend Systems."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Penta-V-Kernel/Penta-V-Kernel"
homepage = "https://github.com/Penta-V-Kernel"

keywords = [
    # Core Infrastructure & Performance
    "rust", "python", "performance", "systems-programming", "low-latency", 
    "no-std", "kernel-security", "stability-protocol", "high-concurrency",
    "parallel-computing", "scalability", "real-time", "distributed-systems",

    # AI & Machine Learning (Targeting AI Developers)
    "llmops", "inference-optimization", "ai-alignment", "deterministic-ai", 
    "neural-governance", "model-reliability", "vector-acceleration", "tensor-guard", 
    "autonomous-safety", "logic-anchoring", "ai-immune-system", "computational-integrity", 
    "high-speed-inference", "automated-sanitization", "predictive-stability", "ai-shield", 
    "runtime-verification", "machine-learning-infrastructure", "data-integrity", 
    "sub-nanosecond-validation", "ai-robustness", "machine-learning", "data-science", "data-cleaning",

    # Specialized Tech & Sovereignty
    "deeptech", "post-quantum", "sovereign-tech", "geometric-logic", "cybersecurity",
    "edge-computing", "resource-migration", "iot",

    # Web3 & Decentralization
    "blockchain", "web3", "smart-contracts", "decentralized", "fintech", "big-data",

    # Industry Applications
    "gamedev", "game-engine"
]

categories = [
    # Primary Domain
    "artificial-intelligence",
    "machine-learning-ops",
    "cryptography",
    "algorithms",
    
    # Systems & Architecture
    "os",
    "embedded-software",
    "hardware-acceleration",
    "data-structures",
    "logic-synthesis",
    
    # Reliability & Science
    "formal-verification",
    "trustworthy-ai",
    "systems-safety",
    "science",
    
    # Tooling & Interface
    "development-tools",
    "api-bindings",
    "rendering",
    "web-programming",
    "database-implementations"
]

# --- Binary & Library Config ---
[lib]
name = "penta_v_kernel"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"] 

[[bench]]
name = "resonance_bench"
harness = false

# --- Features & Integration ---
[features]
default = ["pyo3"]
extension-module = ["pyo3/extension-module"]
sovereign-pack = ["pyo3/abi3-py310"]

# --- Dependencies ---
[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"], optional = true }
rayon = "1.8"
polars-core = { version = "0.36", features = ["performant", "rows", "zip_with", "fmt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
pyo3-build-config = "0.21"

# --- Profiles & Performance Optimizations ---
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
strip = "symbols"
codegen-units = 1

[profile.test]
panic = "abort"
