[build-system]
# Build Requirements: Use maturin as the backend for building Rust-based Python extensions.
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "penta-v-kernel"
# Version 0.4.0: The Resonance Era - Universal Stability for Games, Data, & Backend.
version = "0.4.0" 
description = "Universal Sovereign Engine for Geometric Stability, AI-Logic Validation, and High-Performance Resource Migration across Python and Rust."
requires-python = ">=3.10"
authors = [
    {name = "issac Andrew  (The First Architect)", email = "Issaclex@proton.me"},
    {name = "Klas Segeljakt", email = "klas.segeljakt@example.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"

# --- The Universal Industry Keywords (Maximum Global SEO & Search Optimization for Python/PyPI) ---
keywords = [
    "rust", 
    "python-bindings", 
    "blockchain", 
    "web3", 
    "smart-contracts", 
    "gamedev", 
    "data-science", 
    "backend", 
    "cybersecurity", 
    "deeptech", 
    "post-quantum", 
    "big-data", 
    "game-engine", 
    "ai-safety", 
    "performance", 
    "real-time", 
    "distributed-systems", 
    "data-cleaning", 
    "fintech", 
    "iot", 
    "high-concurrency", 
    "low-latency", 
    "sovereign-tech", 
    "parallel-computing", 
    "decentralized",
    "systems-programming",
    "scalability",
    "resource-migration",
    "no-std",
    "stability-protocol"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Security :: Cryptography",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/Penta-V-Kernel"
Repository = "https://github.com/Penta-V-Kernel/Penta-V-Kernel"
Documentation = "https://github.com/Penta-V-Kernel/Penta-V-Kernel/blob/main/README.md"

[tool.maturin]
# Configuration: Matches the crate module name in Cargo.toml.
module-name = "penta_v_kernel"
features = ["pyo3", "extension-module", "sovereign-pack"]
# Optimization: Strip symbols to reduce binary size for high-performance deployments and games.
strip = true
